[gd_scene load_steps=7 format=2]

[ext_resource path="res://asset/Image/Enemy/Ufo.png" type="Texture" id=1]
[ext_resource path="res://src/GameMain/Enemies/EnmyUfo.gd" type="Script" id=2]
[ext_resource path="res://asset/Sound/Zap02.wav" type="AudioStream" id=3]
[ext_resource path="res://asset/Sound/ufo.wav" type="AudioStream" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 6.0
height = 14.0

[node name="EnemyUfo" type="Area2D"]
position = Vector2( 46, 32 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 2 )

[node name="UfoSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="UfoCrush" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="area_entered" from="." to="." method="_on_EnemyUfo_area_entered"]
